--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,14 @@
   font-weight: 500;
   --main-color: red;
   --secondary-color: #2a333e;
+  --font-heading: "Abhaya Libre", serif;
 }
 .container {
   width: 80%;
   margin: 0 auto;
+}
+button {
+  cursor: pointer;
 }
 a {
   text-decoration: none;
@@ -21,11 +25,31 @@ ul {
   list-style: none;
 }
 
+.section__header h6 {
+  font-weight: 700;
+  font-size: 1.25rem;
+  letter-spacing: 2%;
+  color: var(--secondary-color);
+  text-align: center;
+  text-transform: uppercase;
+}
+.section__header h2 {
+  color: var(--main-color);
+  font-weight: 800;
+  font-size: 5rem;
+  letter-spacing: -8%;
+  font-family: var(--font-heading);
+  text-align: center;
+}
+.section__header img {
+  padding: 0 5rem;
+}
+
 /* ! Start Header */
 .header .container {
   background-image: url("../images/header_overlay.png");
   background-repeat: no-repeat;
-  padding: 20px 0;
+  padding: 1.25rem 0;
   background-size: contain;
   background-position: right center;
   height: 100vh;
@@ -37,16 +61,16 @@ ul {
 .navbar {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 0.625rem;
 }
 .navbar__list {
   display: flex;
-  gap: 42px;
+  gap: 2.625rem;
 }
 
 .navbar__link {
   position: relative;
-  padding-bottom: 5px;
+  padding-bottom: 0.3125rem;
 }
 
 .navbar__list li:nth-child(1) .navbar__link::after {
@@ -55,29 +79,35 @@ ul {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 2px;
+  height: 0.125rem;
   background-color: var(--main-color);
 }
 
 .navbar__actions {
   display: flex;
-  gap: 10px;
+  gap: 0.625rem;
 }
 .navbar__actions button {
   border: none;
   background-color: transparent;
-  font-size: 1.2rem;
+  width: 1.5rem;
+  height: 1.5rem;
   position: relative;
 }
 .navbar__actions-count {
   position: absolute;
-  top: -5px;
+  top: -0.3125rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   right: 0;
   background-color: var(--main-color);
   color: white;
-  border-radius: 50px;
-  font-size: 8px;
-  padding: 3px;
+  border-radius: 3.125rem;
+  font-size: 0.625rem;
+  width: 0.875rem;
+  height: 0.9375rem;
+  padding: 0.3125rem;
 }
 /* End Navbar */
 /* Start Header */
@@ -92,13 +122,13 @@ ul {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 10px;
-  margin-top: 20px;
+  gap: 0.625rem;
+  margin-top: 1.25rem;
 }
 
 .hero__slider span {
-  width: 12px;
-  height: 12px;
+  width: 0.75rem;
+  height: 0.75rem;
   border-radius: 50%;
   background-color: rgba(255, 0, 0, 0.4);
   transition: all 0.3s ease;
@@ -131,38 +161,71 @@ ul {
 }
 .hero__title .hero__title-price h1 {
   color: var(--main-color);
-  font-family: "Abhaya Libre", serif;
+  font-family: var(--font-heading);
   font-weight: 800;
   font-size: 11rem;
 }
 .hero__title p {
-  line-height: 34px;
+  line-height: 2.125rem;
   font-size: 2rem;
 }
-
+.hero__content p {
+  max-width: 29.75rem;
+}
+.hero__buttons {
+  display: flex;
+}
 .hero__buttons button {
   background-color: var(--main-color);
   border: none;
   color: white;
   font-size: 1.2rem;
-  padding: 15px 40px;
+  padding: 0.9375rem 2.5rem;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 0.625rem;
 }
 
-.hero__buttons button:first-child {
-  clip-path: polygon(0% 0%, 100% 0%, 85.38% 100%, 0% 100%);
+.hero__buttons .button__container-cart {
+  filter: drop-shadow(0 32px 40px rgba(255, 0, 0, 0.5));
+}
+.hero__buttons .button__container-cart button {
+  clip-path: shape(
+    from 91.22% 90.44%,
+    curve to 86.97% 100% with 90.51% 96.22%/88.84% 100%,
+    hline to 4.58%,
+    curve to 0% 84.62% with 2.05% 100%/0% 93.11%,
+    vline to 15.38%,
+    curve to 4.58% 0% with 0% 6.89%/2.05% 0%,
+    hline to 95.41%,
+    curve to 99.65% 21.21% with 98.67% 0%/100.89% 11.09%,
+    line to 91.22% 90.44%,
+    close
+  );
   background-color: var(--main-color);
 }
 
-.hero__buttons button:last-child {
-  clip-path: polygon(12.39% -1%, 100% 0%, 100% 100%, 0% 100%);
+.hero__buttons .button__container-table {
+  filter: drop-shadow(0 32px 40px rgba(0, 0, 0, 0.5));
+}
+.hero__buttons .button__container-table button {
+  clip-path: shape(
+    from 8.78% 9.56%,
+    curve to 13.03% 0% with 9.49% 3.78%/11.16% 0%,
+    hline to 95.42%,
+    curve to 100% 15.38% with 97.95% 0%/100% 6.89%,
+    vline to 84.62%,
+    curve to 95.42% 100% with 100% 93.11%/97.95% 100%,
+    hline to 4.59%,
+    curve to 0.35% 78.79% with 1.33% 100%/-0.89% 88.91%,
+    line to 8.78% 9.56%,
+    close
+  );
   background-color: var(--secondary-color);
 }
 
 .hero__time {
   display: flex;
-  gap: 20px;
+  gap: 1.25rem;
   margin-top: 3rem;
 }
 .hero__time h6 {
@@ -177,4 +240,94 @@ ul {
 }
 
 /* End Header */
+/* start popular products */
+.popular__products {
+  position: relative;
+}
+.popular__products .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5rem;
+  margin: 10rem auto;
+}
+.popular__products-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 6.875rem;
+}
+.popular__products-item {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  color: var(--secondary-color);
+}
+.popular__products-item .product__stars {
+  color: var(--main-color);
+}
+.product__image-container {
+  width: 100%;
+  max-width: 11.25rem;
+  aspect-ratio: 1 / 1;
+  overflow: hidden;
+}
+
+.product__image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+.popular__products-item h6 {
+  font-size: 0.9375rem;
+  font-weight: 400;
+}
+.popular__products-item h3 {
+  font-size: 1.75rem;
+  font-weight: 700;
+}
+.popular__products-item button {
+  background-color: var(--main-color);
+  border: none;
+  color: white;
+  border-radius: 0.625rem;
+  width: 12.625rem;
+  height: 2.9375rem;
+  clip-path: shape(
+    from 99.81% 26.95%,
+    curve to 94.89% 0% with 100.71% 13.4%/98.26% 0%,
+    line to 8.93% 0%,
+    curve to 4% 15.6% with 6.63% 0%/4.62% 6.38%,
+    line to 0.19% 73.05%,
+    curve to 5.11% 100% with -0.71% 86.6%/1.74% 100%,
+    hline to 91.07%,
+    curve to 96% 84.4% with 93.37% 100%/95.38% 93.62%,
+    line to 99.81% 26.95%,
+    close
+  );
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  font-size: 0.75rem;
+}
+.popular__products-item .button__container {
+  filter: drop-shadow(0 32px 40px rgba(255, 0, 0, 0.5));
+}
+.popular__products-leaf {
+  position: absolute;
+  width: 6.375rem;
+  height: 5.5rem;
+  left: -2.5625rem;
+  top: 11.6875rem;
+  filter: blur(0.2rem);
+}
+/* end popular products */
 /* ! End Header */
