--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -550,7 +550,7 @@ ul {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 10rem auto;
+  margin: 12rem auto 10rem;
 }
 .popular__menu-content {
   display: flex;
@@ -726,3 +726,80 @@ ul {
   padding: 0;
 }
 /* end download app Section */
+/* Start testimonial Section */
+
+.testimonial .section__header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem 0;
+}
+.testimonial .section__header img {
+  padding-left: 30rem;
+}
+.testimonial__content {
+  display: flex;
+  gap: 2.5rem;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.testimonial__item {
+  border-radius: 0.9375rem;
+  padding: 1.875rem;
+  width: 100%;
+  max-width: 31.25rem;
+  position: relative;
+  display: flex;
+}
+
+.testimonial__img {
+  width: 4.6875rem;
+  height: 4.6875rem;
+  border-radius: 0.625rem;
+  overflow: hidden;
+  margin-right: 1.25rem;
+  flex-shrink: 0;
+}
+
+.testimonial__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.testimonial__item-content {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.testimonial__item-content h6 {
+  font-weight: 500;
+  font-size: 0.9375rem;
+}
+
+.testimonial__item-content span {
+  font-weight: 400;
+  font-size: 0.9375rem;
+}
+
+.testimonial__item-stars i {
+  color: var(--main-color);
+  width: 0.9374rem;
+  height: 0.9374rem;
+}
+
+.testimonial__text {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #555;
+  text-align: justify;
+}
+
+.testimonial__item-content p span {
+  color: var(--main-color);
+  font-weight: 700;
+}
+
+/* end testimonial Section */
