--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -803,3 +803,88 @@ ul {
 }
 
 /* end testimonial Section */
+/* Start discount Section */
+.discount {
+  width: 55.5rem;
+  height: 14.75rem;
+  border: 0.0625rem solid var(--main-color);
+  border-radius: 2.9375rem;
+  margin: 5rem auto 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  gap: 1rem;
+  position: relative;
+  bottom: -5rem;
+  background-color: white;
+}
+.discount h4 {
+  font-weight: 700;
+  font-size: 1.4375rem;
+}
+.discount img {
+  width: 6.8125rem;
+  height: 0.8125rem;
+  text-align: end;
+}
+.discount p {
+  width: 22rem;
+  font-weight: 600;
+  font-size: 0.75rem;
+  color: var(--secondary-color);
+  text-align: center;
+}
+.discount__input {
+  width: 28rem;
+  height: 3.5rem;
+  padding: 0.3rem;
+  font-weight: 400;
+  font-size: 0.75rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 2.9375rem;
+  border: 0.0625rem var(--main-color) solid;
+}
+.discount__input span {
+  padding-left: 1rem;
+}
+.discount__input button {
+  width: 7.25rem;
+  height: 2.875rem;
+  border-radius: 2.9375rem;
+  background-color: var(--main-color);
+  border: none;
+  color: white;
+}
+
+/* end discount Section */
+/* Start footer Section */
+footer {
+  background-color: var(--secondary-color);
+  height: 28.125rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer .container {
+  color: white;
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  padding-top: 1rem;
+}
+footer .footer__item {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+footer .footer__item ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-weight: 400;
+  width: 16.75rem;
+}
+/* end footer Section */
